Ensure background image shows on mobile

--- a/aesthetic.css
+++ b/aesthetic.css
@@ -5,24 +5,19 @@
 }
 
 html {
-  height: 100%;
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
-}
-
-@media screen and (min-width: 420px) {
-  html {
-    background-image: url("banana-leaf.jpg");
-    background-repeat: repeat-y;
-    background-position: center center;
-    background-size: cover;
-  }
+  background-image: url("banana-leaf.jpg");
+  background-repeat: repeat-y;
+  background-position: center center;
+  background-size: cover;
 }
 
 body {
   max-width: 900px;
   padding: 4%;
+  margin: 4rem auto;
   background-color: white;
   font-size: 1.25rem;
   font-family: Arial, sans-serif;
@@ -74,6 +69,10 @@ h1 {
   font-size: 2.4rem;
   text-decoration: underline var(--color__yellow) 0.2rem;
   text-underline-offset: 0.2rem;
+}
+
+h1:first-of-type {
+  margin-top: 0;
 }
 
 h2 {
